Algunos cambios para el chat completo

--- a/src/app/pages/chat-grupal/chat-grupal.page.html
+++ b/src/app/pages/chat-grupal/chat-grupal.page.html
@@ -23,7 +23,7 @@
     </div>
   </div>
   <div class="button-container">
-    <ion-button expand="block" color="primary" routerLink="/grupo-uno">Grupo Uno</ion-button>
+    <ion-button expand="block" (click)="abrirchat()" color="primary" routerLink="/grupo-uno">Grupo Uno</ion-button>
     <ion-button expand="block" color="secondary">Grupo Dos</ion-button>
     <ion-button expand="block" color="tertiary">Grupo Tres</ion-button>
   </div>
